--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-.App {
+/* .App {
   text-align: center;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +37,10 @@
   to {
     transform: rotate(360deg);
   }
+
+  
+} */
+
+.projects_list h2 {
+  text-align: center;
 }
