--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darksalmon;
+  background-color: #61876E;
   margin:0;
   padding: 0;
 }
@@ -7,6 +7,7 @@ body {
 
 .projects_list h2 {
   text-align: center;
+  font-style: italic;
 
 }
 
@@ -20,7 +21,7 @@ body {
   text-decoration: none;
   padding:10px;
   margin-top: 20px;
-  font-weight: bold;
+  font-weight: bolder;
   font-size: 1.5rem;
   color:black
 }
@@ -29,6 +30,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-style: italic;
 
 }
 .projects_card {
@@ -37,7 +39,7 @@ body {
   margin-left: 13%;
 }
 .project {
-  background-color: blue;
+  background-color:#A6BB8D;
   margin:5px;
   border-radius:5px;
 }
@@ -52,8 +54,9 @@ body {
   padding:6px;
 }
  button:hover { 
-background-color: brown;
-cursor: pointer;
+background-color: #61876E;
+cursor:pointer;
+
 }
 button {
   border-radius: 4px;
